source/features/github-bugs.css
/* Style backticked code in links #4817, matches GitHub’s `.markdown-title code` rule */
li[data-testid='commit-row-item'] code /* `isCommitList` commit message */,
div[class^='CommitHeader-module__commitMessageContainer']
	code /* `isCommit` commit message */,
a[class*='PinnedIssue-module__Link'] code {
	padding: 2px 4px;
	background-color: var(
		--bgColor-neutral-muted,
		var(--color-neutral-muted, fuchsia)
	);
	font-size: 0.9em;
	line-height: 1;
	border-radius: 6px;
}

/* Limit width of comment form on commit pages #5032 */
#all_commit_comments .timeline-comment-wrapper {
	max-width: 780px; /* This is the limit applied on the comment thread by `.comment-holder` */
}

/* Fix spacing of repo header button icons #5620 */
.pagehead-actions :is(.btn, summary) .octicon:not(.octicon-triangle-down) {
	margin-right: 4px !important;
}

/* Align icons in the release search field #6506 */
/* Test: https://github.com/refined-github/refined-github/releases */
[action$='/releases'] .subnav-search-icon {
	margin-top: -1px;
}

#release-filter::-webkit-calendar-picker-indicator {
	margin-top: -4px;
}

/* Add margin to release download icon #6510 */
.Box-row :is(.octicon-package, .octicon-file-zip):has(+ a[rel='nofollow']) {
	margin-right: 4px;
}

/* Mute unclickable reaction buttons, disable hover */
/* Test: https://github.com/refined-github/sandbox/pull/48 */
:root .social-reaction-summary-item:disabled {
	filter: grayscale(0.5);
	background-color: transparent;
}

:root .social-reaction-summary-item.user-has-reacted:disabled {
	color: var(
		--reactionButton-selected-fgColor-rest,
		var(--color-accent-fg, fuchsia)
	);
	background-color: var(
		--reactionButton-selected-bgColor-rest,
		var(--color-accent-subtle, fuchsia)
	) !important;
}

/* Hide inactive comment box tabs #7108 */
/* Test: https://github.com/refined-github/sandbox/issues/74 */
.comment-form-head.tabnav:has(~ div .octicon-lock) {
	display: none;
}

/* Fit rendered markdown div to its content #7187 */
div.markdown-body {
	min-height: 2em !important;
}

/* Sponsor button in mobile view #7853 */
/* Test: https://github.com/refined-github/refined-github */
#dialog-show-responsive-sponsor-modal {
	width: var(--base-size-32);
	height: var(--base-size-32);
	padding: 0;
}

/* Notifications "Unread" dropdown  overlap (Safari, Mobile) */
/* Info: https://github.com/refined-github/refined-github/issues/7959 */
/* Test: https://github.com/notifications */
#dialog-show-notifications-tabs-nav ~ action-menu {
	flex-shrink: 0;
}

/* Long release asset download links break the layout */
/* Info: https://github.com/refined-github/refined-github/issues/8065 */
/* Test: https://github.com/hkint/xiaomi-ax3000t-immortalwrt-hanwckf-firmware-build/releases/tag/ImmortalWrt_2024.11.13-0026 */
svg.octicon-package + a.Truncate[href*='/releases/download/'] > .Truncate-text {
	white-space: wrap;
}

/* Notifications "Group by" button unnecessary space */
/* Info: https://github.com/refined-github/refined-github/pull/8208 */
/* Test: https://github.com/notifications */
/* Matches .d-md-block */
@media (width >= 768px) {
	/* Pulls the alert container to the right when empty */
	.gap-4.pl-3:not(:has(a.h6)):has(
			> .d-md-block
				> .js-socket-channel[data-url^='/notifications/beta/recent_notifications_alert']
		) {
		/* Subtract 16px spacing from both .gap-3 and .ml-3 */
		margin-right: -32px;
	}
}

/* Issue picker does not clip unbreakable issue titles in PRs */
/* Info: https://github.com/refined-github/refined-github/pull/8454 */
/* Test: type "#113" in https://github.com/refined-github/sandbox/pull/4 */
.suggester-container li {
	max-width: 500px;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

/* Fix button color contrast when deleting an unused tag */
/* Info: https://github.com/refined-github/refined-github/issues/8803 */
/* Test: https://github.com/refined-github/sandbox/tags */
.dropdown-item.btn-link.color-fg-danger:hover {
	color: var(--fgColor-onEmphasis, fuchsia) !important;
	background-color: var(--bgColor-danger-emphasis, fuchsia);
}

/* TODO: Remove after July 2026 */
/* Make the PR alert banner non-sticky so it doesn't cover the right sidebar */
/* Info: https://github.com/refined-github/refined-github/issues/8975 */
.sticky-header-wrapper.is-stuck .pr-alerts-banner {
	position: absolute;
	visibility: hidden;
}

/* Hide the 'Markdown is supported' label from the comment box footer, as it can overflow the viewport and isn't very useful */
/* Info: https://github.com/refined-github/refined-github/issues/9075 */
/* Test: https://github.com/refined-github/refined-github/pull/9115 */
.js-previewable-comment-form a[href$='basic-writing-and-formatting-syntax'] {
	.Button-label {
		display: none;
	}
	.Button-visual {
		margin-right: 0;
	}
}

/* Vertically center PR summary row */
/* Info: https://github.com/refined-github/refined-github/pull/9116/ */
/* Test: https://github.com/refined-github/sandbox/pull/61 */
div[class^='prc-PageHeader-Description']
> .flex-column.flex-sm-row.flex-items-start {
	/* flex-sm-items-center */
	@media (min-width: 544px) {
		align-items: center !important;
	}
}

/*

Test URLs:

MAKE SURE TO ADD A ISSUE REFERENCE + TEST URL FOR EACH NEW RULE

*/

